trying to fix page spacing

--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,7 @@ h3 {
 }
 
 #spacer {
-    height: 125;
+    height: 150;
 }
 
 #cypress_dusk {
